<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.example.aldo.comunicazionegetpost.RegistrazioneActivity"
    android:weightSum="1">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" />

            <FrameLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="314dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:src="@mipmap/ic_launcher" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" />

            <EditText
                android:id="@+id/registrazione_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/registrazione_cognome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/last_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/registrazione_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:focusable="false"
                android:hint="@string/data_di_nascita"
                android:inputType="date" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:text="@string/sesso" />

                <RadioGroup
                    android:id="@+id/registrazione_sesso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_uomo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/uomo" />

                    <RadioButton
                        android:id="@+id/radio_donna"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/donna" />
                </RadioGroup>
            </LinearLayout>

            <EditText
                android:id="@+id/registrazione_codice_fiscale"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/codice_fiscale"
                android:inputType="text" />

            <EditText
                android:id="@+id/registrazione_pec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pec"
                android:inputType="textWebEmailAddress" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_marginTop="10dp"
                android:layout_weight="0.01"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/esenzione" />

                <RadioGroup
                    android:id="@+id/registrazione_esenzione"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio_tot_esente"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Esente Totale" />

                    <RadioButton
                        android:id="@+id/radio_parz_esente"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Esente Parziale" />

                    <RadioButton
                        android:id="@+id/radio_non_esente"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Non Esente" />
                </RadioGroup>
            </LinearLayout>

            <EditText
                android:id="@+id/registrazionePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Inserisci La password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btnRegistrazione"
                android:layout_width="257dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/buttonshape"
                android:elevation="3dp"
                android:shadowColor="#000000"
                android:shadowDx="3"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:stateListAnimator="@null"
                android:text="SIGN UP"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                android:translationZ="5dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
